Resultados Logs de compilación y ejecución

--- a/web-module/src/main/webapp/WEB-INF/template.xhtml
+++ b/web-module/src/main/webapp/WEB-INF/template.xhtml
@@ -241,7 +241,7 @@
 			<div class="ContentSideSections" id="PFTopLinksCover" style="height:60px;">
                 <a id="LOGOTEXTSIDE" href="#{request.contextPath}/index.xhtml">
                     <span class="dispBlock logoDarkText fontSize30">Testing generator</span>
-                    <span class="dispBlock logoBlueText fontSize30 mediumFont">|||</span>
+                    <span class="dispBlock logoBlueText fontSize30 mediumFont">---------------</span>
                 </a>
                 
                 <span class="PFTopLinks floatRight boldFont cursorPointer" id="themeSwitcher">
